<resources>
    <string name="app_name">DigitalFactoryCalculator</string>
    <string name="facebook_application_id" translatable="false">183788635894681</string>
    <string name="clear">Clear</string>
    <string name="equals">=</string>
    <string name="tangent">tan (x)</string>
    <string name="sine">sine (x)</string>
    <string name="cosine">cos (x)</string>
    <string name="tan">tan</string>
    <string name="sin">sine</string>
    <string name="cos">cos</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="times">*</string>
    <string name="divide">/</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="open_paren">(</string>
    <string name="close_paren">)</string>
</resources>
